--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -2298,3 +2298,7 @@ body .container {
         }
     }
 }
+
+.overflow {
+    overflow: hidden;
+}
